2006-12-30  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_auth.c, modules/authldap.c:
	fix return value for invalid login (closes #481)

2006-12-18  Paul J Stevens <paul@nfg.nl>

	* configure.in, configure:
	cleanup AM_CONDITIONALS after acinclude.m4 changes

2006-12-17  Paul J Stevens <paul@nfg.nl>

	* Makefile.in, config.in, configure, man/Makefile.in, modules/Makefile.in:
	rebuild configure after changes in automake files

2006-12-16  Aaron Stone  <aaron@serendipity.cx>

	* acinclude.m4:
	Fixed bug #195 fix that left AUTHLDAP and SIEVE always defined.

2006-12-16  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_server.c, db.c, test-scripts/testfetch.txt:
	fix bug #464
	
2006-12-15  Aaron Stone  <aaron@serendipity.cx>

	* pipe.c:
	Fixed parse_and_escape to handle incomplete addresses (closes bug #477)

2006-12-13  Aaron Stone  <aaron@serendipity.cx>

	* acinclude.m4, configure.in, Makefile.am, modules/Makefile.am:
	Updated tests for libSieve and LDAP headers and libraries (closes bug #195).

2006-12-12  Paul J Stevens <paul@nfg.nl>

	* dm_imaputil.c, dm_imaputil.h, imap4.c, test-scripts/testsearch.imap:
	remove redundant checkchars function from imap code (closes #473)

2006-12-11  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_mailbox.c, dbmail-mailbox.c:
	prevent excessive merging of search results in OR subsearches (closes
	#471)

2006-12-10  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_imapd.c, dbmail-imapsession.c, dbmail.h.in, dm_imaputil.c, 
	  imap4.c, imapcommands.c:
	cleanup MAX_LIZESIZE and set to 65k
	* Makefile.in, aclocal.m4, buildtools/compile, buildtools/config.guess, 
	  buildtools/config.sub, buildtools/depcomp, buildtools/install-sh, 
	  buildtools/ltmain.sh, buildtools/missing, config.in, configure, 
	  contrib/expirebox.sh, man/Makefile.in, man/dbmail-export.8, 
	  man/dbmail-imapd.8, man/dbmail-lmtpd.8, man/dbmail-pop3d.8, 
	  man/dbmail-sievecmd.8, man/dbmail-smtp.1, man/dbmail-timsieved.8, 