@@ -386,18 +386,40 @@ static int address_is_domain_catchall(deliver_to_user_t *delivery)
 		return 0;
 	}
 
-	TRACE(TRACE_DEBUG, "domain [%s] checking for domain forwards", domain);
+	char *my_domain = g_strdup(domain);
 
-	/* Checking for domain aliases */
-	domain_count = auth_check_user_ext(domain, delivery->userids,
-			delivery->forwards, 0);
-	TRACE(TRACE_DEBUG, "domain [%s] found total of [%d] aliases", domain, domain_count);
+	while (1) {
+		TRACE(TRACE_DEBUG, "domain [%s] checking for domain forwards", domain);
+        
+		/* Checking for domain aliases */
+		domain_count = auth_check_user_ext(my_domain, delivery->userids,
+				delivery->forwards, 0);
+        
+		if (domain_count > 0) {
+			/* This is the way to succeed out. */
+			break;
+		}
 
-	if (domain_count == 0) {
-		return 0;
+		/* On each loop, lop off a chunk between @ and . */
+		char *my_domain_dot = strchr(my_domain, '.');
+
+		if (!my_domain_dot || my_domain_dot == my_domain) {
+			/* This is the way to fail out. */
+			break;
+		}
+
+		snprintf(my_domain, strlen(domain), "@%s", my_domain_dot);
 	}
 
-	return 1;
+	TRACE(TRACE_DEBUG, "domain [%s] found total of [%d] aliases", my_domain, domain_count);
+
+	g_free(my_domain);
+
+	if (domain_count > 0) {
+		return 1;
+	}
+
+	return 0;
 }
 
 static int address_is_userpart_catchall(deliver_to_user_t *delivery)
