@@ -654,11 +654,12 @@ int insert_messages(struct DbmailMessage *message,
 
 			/* Forward using the temporary stored message. */
 			if (send_forward_list(message, delivery->forwards,
-					dbmail_message_get_header(message, "Return-Path")) < 0)
-				/* FIXME: if forward fails, we should do something 
-				 * sensible. Currently, the message is just black-
-				 * holed! */
-				TRACE(TRACE_ERROR, "forward failed message lost");
+					dbmail_message_get_header(message, "Return-Path")) < 0) {
+				/* If forward fails, tell the sender that we're
+				 * having a transient error. They'll resend. */
+				TRACE(TRACE_MESSAGE, "forwaring failed, reporting transient error.");
+				set_dsn(&delivery->dsn, DSN_CLASS_TEMP, 1, 1);
+			}
 		}
 	}			/* from: the delivery for loop */
 
